@@ -50,9 +50,9 @@ Some things, in no specific order, that I'd like to fix:
   		[ ]  There is still a crash bug; try interleaving continue +
   			CTRL-C + continue + CTRL-C, with trace enabled!
 
-  [ ]	Refactor/move helper functions into some helper module:
+  [/]	Refactor/move helper functions into some helper module:
 	[ ]  SplitStringIntoVector
-	[ ]  parse_number
+	[X]  parse_number => StringHelper::ParseNumber, and add unit tests.
 
   [ ]	Plugin framework
   	Note: The term "Plugin" does not mean dynamically loaded. It simply is a
